--- a/activity.html
+++ b/activity.html
@@ -25,7 +25,7 @@
     <div class="newup"></div>
     <div class="font-img"></div> 
     <!-- 浏览器打开 -->
-    <div class="fixed-box" style="display: block;" id="otherShow">
+    <div class="fixed-box" style="height: 1.06rem; display: block;" id="otherShow">
         <p class="fixed-p user-p" style="display: none;">您好，<span id="userAccount"></span><span class="fixed-span" onclick="logout();">退出登录</span></p>
         <p class="fixed-p no-p" style="display: block;">未登录，<span class="fixed-span" style="margin-left: 0;" onclick="showLoginModal();">立即登录</span></p>
         <p style="display: flex;justify-content: center;">
