--- a/activityBlue1.html
+++ b/activityBlue1.html
@@ -6,41 +6,27 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <link rel="icon" href="./favicon.ico">
-    <title>取证宝</title>
+    <title>取证</title>
     <meta name="keywords"
           content="版权服务,版权百科,版权,版权家,版权存证,版权交易,版权监测,版权维权,版权登记,版权公证,版权签名,数字版权,版全家,版权侵权取证,版权法律维权服务,区块链版权登记,区块链版权确权,区块链版权存证,区块链版权">
     <meta name="description"
           content="版权家,人人都是创作者，人人都是版权人。版权家秉持让版权实现更大价值的使命，使用创新的版权区块链和版权签名技术，为版权人提供极致的版权存证、版权交易、版权监测、版权维权服务体验。">
     <link rel="stylesheet" href="./css/mobile_reset.css">
     <link rel="stylesheet" href="./css/property_right_activity.css">
-    <script>
-        var _hmt = _hmt || [];
-        (function() {
-          var hm = document.createElement("script");
-          hm.src = "https://hm.baidu.com/hm.js?2ceb21e288024879ef2eced191a2da88";
-          var s = document.getElementsByTagName("script")[0]; 
-          s.parentNode.insertBefore(hm, s);
-        })();
-    </script>
-        
 </head>
 <body>
-<div class="activity_box">
-    <div class="header"></div>
-    <div class="time-tip"></div>
-    <div class="protect"></div>
-    <div class="new-person"></div>
-    <div class="gift"></div>
-    <div class="play"></div>
-    <div class="newup"></div>
-    <div class="font-img"></div> 
+<div class="activity_box" style="background: #282194;">
+    <div class="header-two"></div>
+    <div class="time-tip-two"></div>
+    <div class="protect-two"></div>
+    <div class="new-person-two"></div>
     <!-- 浏览器打开 -->
     <div class="fixed-box" style="height:1.06rem;" id="otherShow">
         <p class="fixed-p user-p" style="display: none;">您好，<span id="userAccount"></span><span class="fixed-span" onclick="logout();">退出登录</span></p>
         <p class="fixed-p no-p" style="display: block;">未登录，<span class="fixed-span" style="margin-left: 0;" onclick="showLoginModal();">立即登录</span></p>
         <p style="display: flex;justify-content: center;">
-            <button class="fixed-leftbtn showgif" onclick="inviteFriend(1)" style="display: none;">邀请他人注册</button>
-            <button class="fixed-rightbtn" onclick="receiveGift(1)">领取注册礼包</button>
+            <button class="fixed-leftbtn showgif" onclick="inviteFriend(2);" style="display: none;">邀请他人注册</button>
+            <button class="fixed-rightbtn-two" onclick="receiveGift(2)">领取注册礼包</button>
         </p>
     </div>
 
@@ -48,7 +34,7 @@
     <div class="fixed-box" style="height:0.64rem;" id="appshow">       
         <p style="display: flex;justify-content: center;margin-top:0.12rem;">
             <button class="fixed-leftbtn" id="giveUrl">邀请他人注册</button>
-            <button class="fixed-rightbtn" id="giveGift">领取注册礼包</button>
+            <button class="fixed-rightbtn-two" id="giveGift">领取注册礼包</button>
         </p>
     </div>
 
@@ -98,21 +84,21 @@
     <!-- 领取完成！ -->
     <div class="generalframezz" style="display: none;" id="happyModal">
         <div class="generalcontent" style="width:2.85rem;height:2.77rem;">
-            <img src="./images/security.png" class="modal-img" />
+            <img src="./images/two5.png" class="modal-img-two" />
             <p class="p18">领取完成！</p>
             <p class="p14">快去登录取证宝APP看看吧</p>
-            <button class="downBtn" id="gobower">下载取证宝APP</button>
+            <button class="downBtn-two" id="gobower">下载取证宝APP</button>
         </div>
     </div>
 
     <!-- 很遗憾！ -->
     <div class="generalframezz" style="display: none;" id="sorryModal">
         <div class="generalcontent" style="width:2.85rem;height:2.77rem;">
-            <img src="./images/sorry.png" class="modal-img" style="margin-bottom: 0.08rem;"/>
+            <img src="./images/two6.png" class="modal-img-two" style="margin-bottom: 0.03rem;"/>
             <p class="p18">很遗憾！</p>
             <p class="p14" style="margin:0.1rem 0 0.08rem;">您是老用户无法领取注册礼包</p>
             <p class="p14" style="margin:0rem 0 0.31rem;">邀请其他用户注册成功，可获得邀请礼包</p>
-            <button class="downBtn" onclick="golink(1)">邀请他人注册</button>
+            <button class="downBtn-two" onclick="golink(2)">邀请他人注册</button>
         </div>
     </div>
 
@@ -142,14 +128,4 @@
 <script src="./js/fontsizeset.js"></script>
 <script src="./js/js.cookie.js"></script>
 <script src="./js/property_right_activity.js"></script>
-<script>
-    //百度埋点
-    window.burialPoint = function burialPoint(type,op,value){
-        try{
-            _hmt.push(['_trackEvent', type, op, value, new Date().getTime()]);
-        }catch(e){
-            console.log(e)
-        }
-    }
-</script>
 </html>
