--- a/share.html
+++ b/share.html
@@ -32,7 +32,7 @@
 <script>
     $(function(){      
         $.ajax({
-            url:'https://tsmarsss.bqj.cn/front/evidence/activity/getEvidenceActivityPic',
+            url:'https://svip.bqj.cn/front/evidence/activity/getEvidenceActivityPic',
             type: "GET",
             dataType: "json",
             xhrFields: {
