--- a/activityBlue.html
+++ b/activityBlue.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
     <link rel="icon" href="./favicon.ico">
-    <title>取证宝</title>
+    <title>取证</title>
     <meta name="keywords"
           content="版权服务,版权百科,版权,版权家,版权存证,版权交易,版权监测,版权维权,版权登记,版权公证,版权签名,数字版权,版全家,版权侵权取证,版权法律维权服务,区块链版权登记,区块链版权确权,区块链版权存证,区块链版权">
     <meta name="description"
@@ -22,33 +22,30 @@
           s.parentNode.insertBefore(hm, s);
         })();
     </script>
-        
 </head>
 <body>
-<div class="activity_box">
-    <div class="header"></div>
-    <div class="time-tip"></div>
-    <div class="protect"></div>
-    <div class="new-person"></div>
-    <div class="gift"></div>
-    <div class="play"></div>
-    <div class="newup"></div>
-    <div class="font-img"></div> 
+<div class="activity_box" style="background: #282194;">
+    <div class="header-two"></div>
+    <div class="time-tip-two"></div>
+    <div class="protect-two"></div>
+    <div class="new-person-two"></div>
+    <div class="new-one"></div>
+    <div class="new-two"></div>
     <!-- 浏览器打开 -->
-    <div class="fixed-box" style="height:1.06rem;" id="otherShow">
+    <div class="fixed-box" style="height:1.06rem;background:rgba(40,33,148,1);box-shadow:0rem -0.07rem 0.22rem 0rem rgba(0,21,96,0.3);" id="otherShow">
         <p class="fixed-p user-p" style="display: none;">您好，<span id="userAccount"></span><span class="fixed-span" onclick="logout();">退出登录</span></p>
         <p class="fixed-p no-p" style="display: block;">未登录，<span class="fixed-span" style="margin-left: 0;" onclick="showLoginModal();">立即登录</span></p>
         <p style="display: flex;justify-content: center;">
-            <button class="fixed-leftbtn showgif" onclick="inviteFriend(1)" style="display: none;">邀请他人注册</button>
-            <button class="fixed-rightbtn" onclick="receiveGift(1)">领取注册礼包</button>
+            <button class="fixed-leftbtn-two showgif" onclick="inviteFriend(2);" style="display: none;">邀请他人注册</button>
+            <button class="fixed-rightbtn-two" onclick="receiveGift(2)">领取注册礼包</button>
         </p>
     </div>
 
     <!-- app内 -->
     <div class="fixed-box" style="height:0.64rem;" id="appshow">       
         <p style="display: flex;justify-content: center;margin-top:0.12rem;">
-            <button class="fixed-leftbtn showgif" id="giveUrl" style="display: none;">邀请他人注册</button>
-            <button class="fixed-rightbtn" id="giveGift">领取注册礼包</button>
+            <button class="fixed-leftbtn-two showgif" id="giveUrl" style="display: none;">邀请他人注册</button>
+            <button class="fixed-rightbtn-two" id="giveGift">领取注册礼包</button>
         </p>
     </div>
 
@@ -79,7 +76,7 @@
                 <div class="login-group">
                     <input type="text" placeholder="请输入手机号" class="login-phone" style="margin:0.25rem 0 0.15rem;" id="phoneNum" maxlength="11" autocomplete="off" />
                     <div class="input-group" style="margin-bottom: 0.15rem;">
-                        <input type="text" placeholder="请输入验证码" class="login-password" style="width:1.75rem" id="codeNum" autocomplete="off" />
+                        <input type="text" placeholder="请输入密码" class="login-password" style="width:1.75rem" id="codeNum" autocomplete="off" />
                         <span class="login-code count_down_btn" id="sendCode" style="display: inline-block;">获取验证码</span>
                         <span class="login-code count_down_show" id="sendCode" style="display: none;">60</span>
                     </div>
@@ -98,22 +95,21 @@
     <!-- 领取完成！ -->
     <div class="generalframezz" style="display: none;" id="happyModal">
         <div class="generalcontent" style="width:2.85rem;height:2.77rem;">
-            <img src="./images/cha.png" class="modal-cha" onclick="closeCha()" />
-            <img src="./images/security.png" class="modal-img" />
+            <img src="./images/two5.png" class="modal-img-two" />
             <p class="p18">领取完成！</p>
             <p class="p14">快去登录取证宝APP看看吧</p>
-            <button class="downBtn" id="gobower">下载取证宝APP</button>
+            <button class="downBtn-two" id="gobower">下载取证宝APP</button>
         </div>
     </div>
 
     <!-- 很遗憾！ -->
     <div class="generalframezz" style="display: none;" id="sorryModal">
         <div class="generalcontent" style="width:2.85rem;height:2.77rem;">
-            <img src="./images/sorry.png" class="modal-img" style="margin-bottom: 0.08rem;"/>
+            <img src="./images/two6.png" class="modal-img-two" style="margin-bottom: 0.03rem;"/>
             <p class="p18">很遗憾！</p>
             <p class="p14" style="margin:0.1rem 0 0.08rem;">您是老用户无法领取注册礼包</p>
             <p class="p14" style="margin:0rem 0 0.31rem;">邀请其他用户注册成功，可获得邀请礼包</p>
-            <button class="downBtn" onclick="golink(1)">邀请他人注册</button>
+            <button class="downBtn-two" onclick="golink(2)">邀请他人注册</button>
         </div>
     </div>
 
